openshift/flink/cert-manager-operator.yaml
# Red Hat cert-manager Operator; it deploys cert-manager into the "cert-manager" namespace.
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager-operator
